{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 75,
  "lineage": "3c7ceb3d-1c3e-d901-2e19-bfe9ad7d9209",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a5b5b6223867592",
            "arn": "arn:aws:ec2:us-east-1:328307993439:elastic-ip/eipalloc-04a5b5b6223867592",
            "association_id": "eipassoc-0942b321f7402fba4",
            "domain": "vpc",
            "id": "eipalloc-04a5b5b6223867592",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f0342aa9d21b9e8a",
            "private_dns": "ip-10-0-0-203.ec2.internal",
            "private_ip": "10.0.0.203",
            "public_dns": "ec2-44-217-84-82.compute-1.amazonaws.com",
            "public_ip": "44.217.84.82",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ecbb8ba07f65d41",
            "arn": "arn:aws:ec2:us-east-1:328307993439:instance/i-037160a964bcc0a64",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037160a964bcc0a64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f53a502c6faea2fd"
              }
            ],
            "primary_network_interface_id": "eni-0f53a502c6faea2fd",
            "private_dns": "ip-10-0-0-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.148",
            "public_ip": "54.211.251.11",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e2f244d64e134506",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01764898936a6dfa2",
            "tags": {
              "Name": "public-ec2"
            },
            "tags_all": {
              "Name": "public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081b5a3ce1a500365"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "328307993439",
            "id": "i-037160a964bcc0a64",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.name",
            "aws_subnet.name-1",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ecbb8ba07f65d41",
            "arn": "arn:aws:ec2:us-east-1:328307993439:instance/i-09136eea6913f3626",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09136eea6913f3626",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09359d1ca36fd4de2"
              }
            ],
            "primary_network_interface_id": "eni-09359d1ca36fd4de2",
            "private_dns": "ip-10-0-1-99.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.99",
            "public_ip": "54.236.55.53",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0911ac4bd2db7cf16",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b686041bed69e4af",
            "tags": {
              "Name": "private-ec2"
            },
            "tags_all": {
              "Name": "private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081b5a3ce1a500365"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "328307993439",
            "id": "i-09136eea6913f3626",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.name",
            "aws_subnet.name-2",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328307993439:internet-gateway/igw-0d1272c639c1465aa",
            "id": "igw-0d1272c639c1465aa",
            "owner_id": "328307993439",
            "region": "us-east-1",
            "tags": {
              "Name": "custom-igw"
            },
            "tags_all": {
              "Name": "custom-igw"
            },
            "vpc_id": "vpc-09e8436373fc316ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a5b5b6223867592",
            "association_id": "eipassoc-0942b321f7402fba4",
            "connectivity_type": "public",
            "id": "nat-0fe0ecdcd0306c515",
            "network_interface_id": "eni-0f0342aa9d21b9e8a",
            "private_ip": "10.0.0.203",
            "public_ip": "44.217.84.82",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01764898936a6dfa2",
            "tags": {
              "Name": "custom-nat"
            },
            "tags_all": {
              "Name": "custom-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.name",
            "aws_internet_gateway.name",
            "aws_subnet.name-1",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328307993439:route-table/rtb-09423c3c0dd24d7f0",
            "id": "rtb-09423c3c0dd24d7f0",
            "owner_id": "328307993439",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1272c639c1465aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT"
            },
            "tags_all": {
              "Name": "public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e8436373fc316ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "328307993439",
            "id": "rtb-09423c3c0dd24d7f0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.name",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "name-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328307993439:route-table/rtb-00234d3559ffb9243",
            "id": "rtb-00234d3559ffb9243",
            "owner_id": "328307993439",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fe0ecdcd0306c515",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-RT"
            },
            "tags_all": {
              "Name": "private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e8436373fc316ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "328307993439",
            "id": "rtb-00234d3559ffb9243",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.name",
            "aws_internet_gateway.name",
            "aws_nat_gateway.name",
            "aws_subnet.name-1",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6860be83c81c4f9",
            "region": "us-east-1",
            "route_table_id": "rtb-00234d3559ffb9243",
            "subnet_id": "subnet-0b686041bed69e4af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.name",
            "aws_internet_gateway.name",
            "aws_nat_gateway.name",
            "aws_route_table.name-1",
            "aws_subnet.name-1",
            "aws_subnet.name-2",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bd7fc39ea52a3de",
            "region": "us-east-1",
            "route_table_id": "rtb-09423c3c0dd24d7f0",
            "subnet_id": "subnet-01764898936a6dfa2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.name",
            "aws_route_table.name",
            "aws_subnet.name-1",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328307993439:security-group/sg-081b5a3ce1a500365",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081b5a3ce1a500365",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": "",
            "owner_id": "328307993439",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "custom-sg"
            },
            "tags_all": {
              "Name": "custom-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e8436373fc316ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "328307993439",
            "id": "sg-081b5a3ce1a500365",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "name-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328307993439:subnet/subnet-01764898936a6dfa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01764898936a6dfa2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328307993439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "custom-public-subnet"
            },
            "tags_all": {
              "Name": "custom-public-subnet"
            },
            "vpc_id": "vpc-09e8436373fc316ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "328307993439",
            "id": "subnet-01764898936a6dfa2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "name-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328307993439:subnet/subnet-0b686041bed69e4af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b686041bed69e4af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328307993439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "custom-private-subnet"
            },
            "tags_all": {
              "Name": "custom-private-subnet"
            },
            "vpc_id": "vpc-09e8436373fc316ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "328307993439",
            "id": "subnet-0b686041bed69e4af",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328307993439:vpc/vpc-09e8436373fc316ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055e7c04873601fcf",
            "default_route_table_id": "rtb-08b6ea17ca9e9fd61",
            "default_security_group_id": "sg-046c1676373b7e931",
            "dhcp_options_id": "dopt-06b1ca35e5ea1dc1f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e8436373fc316ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b6ea17ca9e9fd61",
            "owner_id": "328307993439",
            "region": "us-east-1",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "Name": "custom-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "328307993439",
            "id": "vpc-09e8436373fc316ea",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}